Card minor changes

--- a/style.css
+++ b/style.css
@@ -71,4 +71,21 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  .card {
+    width: 12rem !important;
+    height: 22rem !important;
+  }
+
+  .card-img-top {
+    width: 12rem;
+  }
+
+  .card-title {
+    font-size: 0.75rem;
+  }
+
+  .card-text {
+    font-size: 0.5rem;
+  }
 }
