--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Open Sans", sans-serif !important;
+  overflow-x: hidden !important;
 }
 
 .logo {
@@ -74,7 +75,7 @@ body {
 
   .card {
     width: 12rem !important;
-    height: 22rem !important;
+    height: 20rem !important;
   }
 
   .card-img-top {
@@ -88,4 +89,27 @@ body {
   .card-text {
     font-size: 0.5rem;
   }
+}
+
+.section-pg3 {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem !important;
+}
+
+.dummy-dir {
+  padding: 80px;
+  background-color: black;
+}
+
+li {
+  list-style: none;
+}
+
+ul {
+  list-style: none;
 }
