--- a/style.css
+++ b/style.css
@@ -93,3 +93,29 @@ body {
     font-size: 0.5rem;
   }
 }
+
+.board {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.sec-3-img {
+  width: 24rem;
+  border-radius: 12px;
+}
+
+@media screen and (max-width: 986px) {
+  .board {
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: center;
+  }
+
+  .sec-3-img {
+    width: 11rem;
+  }
+}
