--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
   font-family: "Open Sans", sans-serif !important;
   overflow-x: hidden !important;
+  width: 100vw;
+  height: auto;
 }
 
 .logo {
@@ -21,6 +23,7 @@ body {
   /* background-color: blueviolet; */
   gap: 1rem;
   margin-bottom: 6rem;
+  text-align: center;
 }
 
 .secOne-right {
@@ -36,7 +39,12 @@ body {
 }
 
 @media screen and (max-width: 986px) {
+  html,
   body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     overflow-x: hidden !important;
   }
   .section-pg1 {
@@ -69,7 +77,7 @@ body {
 
 @media screen and (max-width: 986px) {
   .section-pg2 {
-    flex-direction: column;
+    flex-direction: row;
     background-image: url(./Images/mobile-bg1.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -117,5 +125,6 @@ body {
 
   .sec-3-img {
     width: 10rem;
+    margin: 0 1rem;
   }
 }
