--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
 
 @media screen and (max-width: 986px) {
   .section-pg2 {
-    flex-direction: column;
+    flex-direction: row;
     background-image: url(./Images/mobile-bg1.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -111,19 +111,32 @@ body {
   .card-text {
     font-size: 0.5rem;
   }
+
+  .text-muted {
+    font-size: 0.75rem;
+  }
+
+  .boardOfDirec {
+    flex-direction: column;
+  }
 }
 
 .boardOfDirec {
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 1.5rem;
 }
 
-.extra-card {
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
+.card-boxes {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  color: black;
+  /* background-color: aqua; */
 }
